# ph-wifi-portal

./: .gitignore  ADCASH-INTEGRATION.md  ADMIN_UI_CONTEXT.md  ARCHITECTURE.md  CHANGELOG-v2.md  CHANGELOG-v3.md  CHANGELOG.md  CLAUDE.md  Dockerfile  MASTER-PLAN.md  README.md  requirements.txt  zeabur.json
deploy/: .domain  Dockerfile  backup.sh  docker-compose.yml  nginx.conf  setup.sh  update.sh
deploy/omada/: docker-compose.yml
docs/: ADCASH-RESEARCH.md  ADCASH-SETUP.md  BUSINESS-PLAYBOOK.md  DEPLOYMENT-GUIDE.md  FIRST-DEPLOYMENT.md  MARKET-RESEARCH.md  NEW-FEATURES.md  OC200-SETUP.md  REVENUE-OPTIMIZATION.md  TESTING.md  UI-IMPROVEMENTS.md  WALLED-GARDEN.md
docs/legal/: ACCEPTABLE_USE_POLICY.md  ADVERTISER_AGREEMENT.md  AKD_PRIVACY_POLICY.md  CAPTIVE_PORTAL_CONSENT.md  (+5 more)
server/: .coverage  .env.example  alembic.ini  config.py  main.py  main_minimal.py  main_wrapper.py  pyproject.toml  rate_limit.py  requirements.txt
server/alembic/: env.py
server/alembic/versions/: 001_initial.py  002_admin_expansion.py  003_saas_multitenant.py
server/models/: database.py  schemas.py
server/routers/: admin.py  auth.py  campaigns.py  compliance.py  dashboard.py  equipment.py  invoices.py  portal.py  saas_auth.py  superadmin.py
server/services/: data_retention.py  omada.py  redis_service.py
server/templates/: portal.html
server/tests/: conftest.py  test_admin_api.py  test_auth.py  test_auth_extended.py  test_dashboard.py  test_omada.py  test_portal.py  test_saas_auth.py  test_superadmin.py
web/: Dockerfile  middleware.ts  package-lock.json  package.json
(+58 files in other folders)
