[tool.poetry]
name = "ph-wifi-portal"
version = "1.0.0"
description = "Enterprise WiFi Ad Monetization System"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
redis = {extras = ["asyncio"], version = "^5.0.8"}
httpx = "^0.27.0"
structlog = "^24.4.0"
slowapi = "^0.1.9"
aiosqlite = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
factory-boy = "^3.3.0"
faker = "^28.0.0"
mypy = "^1.11.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
